[package]
name = "pms-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0"
actix-service = "2.0.2"
mongodb = "2.5.0"
serde = "1.0.160"
futures = "0.3.28"
pwhash = "1.0.0"
jsonwebtoken = "8.3.0"
chrono = "0.4.24"
regex = "1.8.1"